--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
   "name": "finmap",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "private": true,
   "engines": {
     "node": "14.x"
   },
   "scripts": {
+    "dev": "next dev -p 8002",
+    "build": "next build",
     "start": "node web.js"
   },
   "dependencies": {
     "compression": "1.7.4",
-    "express": "4.18.2"
+    "express": "4.18.2",
+    "gray-matter": "4.0.3",
+    "marked": "4.3.0",
+    "next": "12.3.4",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   }
 }
