--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postbuild": "next-sitemap"
   },
   "dependencies": {
+    "chart.js": "^3.9.1",
     "compression": "1.7.4",
     "express": "4.18.2",
     "gray-matter": "4.0.3",
@@ -19,6 +20,7 @@
     "next": "12.3.4",
     "next-sitemap": "^4.2.3",
     "react": "17.0.2",
+    "react-chartjs-2": "^3.3.0",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
