Move DB config to env and update db.js

--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,11 @@
 NEXT_PUBLIC_GA_ID=G-HYS82YP0CH
+
+# ✅ DB (서버 내부 MySQL)
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_NAME=ljw0209
+DB_USER=finmap_app
+DB_PASSWORD=fortnight0209!
+DB_POOL_LIMIT=10
+DB_CONNECT_TIMEOUT=10000
+DB_BOOT_CHECK=false
