--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,12 @@
 CLOUDINARY_CLOUD_NAME=dwonflmnn
 CLOUDINARY_API_KEY=389579545397819
 CLOUDINARY_API_SECRET=Fw-fgvnCJt4sFFhC8zeVOKptNDg
+
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_NAME=ljw0209
+DB_USER=finmap_app
+DB_PASSWORD=fortnight0209!
+DB_POOL_LIMIT=10
+DB_CONNECT_TIMEOUT=10000
+DB_BOOT_CHECK=false
