Move DB config to env and update db.js

--- a/.env.local
+++ b/.env.local
@@ -4,7 +4,7 @@ CLOUDINARY_API_SECRET=Fw-fgvnCJt4sFFhC8zeVOKptNDg
 
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_NAME=ljw0209
+DB_NAME=finmap
 DB_USER=finmap_app
 DB_PASSWORD=fortnight0209!
 DB_POOL_LIMIT=10
