--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "mysql2": "^3.15.3",
     "next": "^13.5.8",
     "next-sitemap": "^4.2.3",
-    "react": "^18.3.1",
+    "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.3.1",
+    "react-dom": "18.2.0",
     "react-tooltip": "^5.30.0",
     "recharts": "^2.12.0"
   },
