Add: Puppeteer Info

--- a/.env.local
+++ b/.env.local
@@ -1,9 +1,12 @@
+TZ=Asia/Seoul
+CHROMIUM_PATH=C:\Program Files\Google\Chrome\Application\chrome.exe
+
 CLOUDINARY_CLOUD_NAME=dwonflmnn
 CLOUDINARY_API_KEY=389579545397819
 CLOUDINARY_API_SECRET=Fw-fgvnCJt4sFFhC8zeVOKptNDg
 
 DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_PORT=3307
 DB_NAME=finmap
 DB_USER=finmap_app
 DB_PASSWORD=Fortnight0209!
