--- a/.env.production
+++ b/.env.production
@@ -9,3 +9,7 @@ DB_PASSWORD=Fortnight0209!
 DB_POOL_LIMIT=10
 DB_CONNECT_TIMEOUT=10000
 DB_BOOT_CHECK=false
+
+CHROMIUM_PATH=/snap/bin/chromium
+TZ=Asia/Seoul
+ECOS_API_KEY=BPHUYDGRDSTSXUIS3JLF
