--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "chart.js": "^4.4.1",
+    "cheerio": "^1.1.2",
     "cloudinary": "^2.8.0",
     "compression": "^1.8.1",
+    "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
     "express": "^4.19.2",
     "gray-matter": "^4.0.3",
@@ -25,14 +28,18 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.4",
     "marked": "^12.0.2",
+    "moment-timezone": "^0.5.48",
     "mysql2": "^3.15.3",
     "next": "^13.5.8",
     "next-sitemap": "^4.2.3",
+    "node-schedule": "^2.1.1",
+    "puppeteer-core": "^24.34.0",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-tooltip": "^5.30.0",
-    "recharts": "^2.12.0"
+    "recharts": "^2.12.0",
+    "yahoo-finance2": "^3.10.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
