--- a/.env.local
+++ b/.env.local
@@ -12,4 +12,4 @@ DB_USER=finmap_app
 DB_PASSWORD=Fortnight0209!
 DB_POOL_LIMIT=10
 DB_CONNECT_TIMEOUT=10000
-DB_BOOT_CHECK=false
+DB_BOOT_CHECK=true
