--- a/.env.production
+++ b/.env.production
@@ -8,7 +8,7 @@ DB_USER=finmap_app
 DB_PASSWORD=Fortnight0209!
 DB_POOL_LIMIT=10
 DB_CONNECT_TIMEOUT=10000
-DB_BOOT_CHECK=false
+DB_BOOT_CHECK=true
 
 CHROMIUM_PATH=/snap/bin/chromium
 TZ=Asia/Seoul
