--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "marked": "^12.0.2",
     "moment-timezone": "^0.5.48",
     "mysql2": "^3.15.3",
-    "next": "^13.5.8",
+    "next": "14.2.35",
     "next-sitemap": "^4.2.3",
     "node-schedule": "^2.1.1",
     "puppeteer-core": "^24.34.0",
